# x509-path-finder

./: Cargo.toml  README.md
.github/access/: gitconfig
.github/workflows/: ci.yaml
doc/: find.puml
material/: Cargo.toml  kim@id.vandelaybank.com.cer  kim@id.vandelaybank.com.p7c  vandelaybank.com.cer
material/src/: fs.rs  lib.rs
material/src/generate/: mod.rs  result.rs
src/: aia.rs  api.rs  certificate.rs  edge.rs  find.rs  lib.rs  report.rs  result.rs  store.rs
src/api/: certificate.rs  mod.rs  store.rs  test_certificate.rs  tests.rs  validator.rs
src/provided/: mod.rs
src/provided/certificate/: mod.rs
src/provided/certificate/default/: certificate.rs  iter.rs  mod.rs  tests.rs
src/provided/certificate/openssl/: certificate.rs  iter.rs  mod.rs  tests.rs
src/provided/default_common/: mod.rs  result.rs
src/provided/openssl_common/: mod.rs  result.rs
src/provided/store/: mod.rs
src/provided/store/concurrent/: mod.rs  tests.rs
src/provided/store/default/: certificate.rs  mod.rs  tests.rs
src/provided/validator/: mod.rs
src/provided/validator/default/: mod.rs  result.rs  tests.rs
src/provided/validator/openssl/: mod.rs  result.rs  tests.rs
src/report/: mod.rs  path.rs
src/store/: mod.rs  tests.rs
src/tests/: certificate.rs  find.rs  find_default.rs  find_openssl.rs  mod.rs  store.rs  test_certificate.rs  test_validator.rs  validator.rs
src/tests/material/: ciph.xxx.cer  identity.vandelaybank.com.pem  kim@id.vandelaybank.com-fullchain.pem  kim@id.vandelaybank.com.pem  mod.rs  resource.resources.ciph.xxx-fullchain.pem  resource.resources.ciph.xxx.cer  resource.resources.ciph.xxx.p7c  resource.resources.ciph.xxx.pem
src/tests/test_certificate/: certificate.rs  iter.rs  mod.rs  result.rs
tests/default/: certificate.rs  find.rs  main.rs  validator.rs
tests/generator/: main.rs
tests/openssl/: find.rs  main.rs  validator.rs
