[package]
name = "x509-path-finder"
version = "0.3.5"
edition = "2021"
authors = ["Curtis Lee Fulton <curtis@ciphx.com>"]
repository = "https://github.com/merlincinematic/x509-path-finder"
readme = "README.md"
license = "Apache-2.0"
categories = ["web-programming::http-client", "network-programming", "authentication", "cryptography"]
keywords = ["x509", "validate", "path", "search", "aia"]
description = "X509 Path Finder is a depth-first search certificate path validator for Rust."
homepage = "https://ciphx.com"
exclude = ["/.github", "/.gitignore"]

[dependencies]
log = { version = "0.4.19" }
url = { version = "2.4.0" }
openssl = { version = "0.10.56", features = ["vendored"], optional = true }
rustls = { version = "0.21.7", features = ["dangerous_configuration"], optional = true }
cms = { version = "0.2.2", features = ["std", "pem"], optional = true }
x509-cert = { version = "0.2.4", features = ["pem"], optional = true }
x509-client = { version = "2.0.1" }

[dev-dependencies]
tokio = { version = "1.30.0", features = ["full"] }
env_logger = { version = "0.10.0" }
serde = { version = "1.0.185" }
serde_json = { version = "1.0.105" }
base64 = { version = "0.21.2" }
url = { version = "2.4.0", features = ["serde"] }
x509-client = { version = "2.0.1" }

[features]
default = ["rustls", "cms", "x509-cert"]
openssl = ["dep:openssl", "x509-client/openssl"]

[package.metadata.docs.rs]
all-features = true