[package]
name = "x509-path-finder"
version = "0.6.1"
edition = "2021"
authors = ["Curtis Lee Fulton <curtis@ciphx.com>"]
repository = "https://github.com/merlincinematic/x509-path-finder"
readme = "README.md"
license = "Apache-2.0"
categories = ["web-programming::http-client", "network-programming", "authentication", "cryptography"]
keywords = ["x509", "validate", "path", "search", "aia"]
description = "X509 Path Finder is a depth-first search certificate path validator for Rust."
homepage = "https://ciphx.com"
exclude = ["/.github", "/.gitignore"]

[dependencies]
log = { version = "0.4.19" }
bytes = { version = "1" }
url = { version = "2.4.0" }
sha2 = { version = "0.10.7" }
openssl = { version = "0.10.56", features = ["vendored"], optional = true }
rustls = { version = "0.21.7", features = ["dangerous_configuration"], optional = true }
x509-cert = { version = "0.2.4", features = ["pem"] }
der = { version = "0.7.6", features = ["alloc", "derive", "flagset", "oid"] }
x509-client = { version = "2.0.1" }

[dev-dependencies]
tokio = { version = "1.30.0", features = ["full"] }
openssl = { version = "0.10.56", features = ["vendored"], optional = false }
x509-path-finder-material = { path = "./material" }

[features]
default = ["rustls"]
openssl = ["dep:openssl", "x509-client/openssl"]

[package.metadata.docs.rs]
all-features = true
