[package]
name = "x509-path-finder-material"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.30.0", features = ["full"] }
url = { version = "2.4.0" }
openssl = { version = "0.10.56", features = ["vendored"], optional = true }
x509-cert = { version = "0.2.4", features = ["pem"] }
x509-client = { version = "2.0.1" }
